# mourhhold

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .project-standards.yaml  .release-please-manifest.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  justfile  release-please-config.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
assets/characters/base_set/extras/: how_to_use.txt
crates/mourhhold/: CHANGELOG.md  Cargo.toml
crates/mourhhold/src/: assets.rs  character.rs  main.rs  world.rs
crates/mourhhold_core/: CHANGELOG.md  Cargo.toml
crates/mourhhold_core/src/: lib.rs
docs/lore/: cosmologia.md  glossary.md  sistemas-e-mecanicas-base.md
docs/lore/atos/: ato-1-fugitivo-de-ravenhollow.md
